Scrolling fixes on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -19,7 +19,7 @@ html, body {
 html {
     position: relative;
     -webkit-overflow-scrolling: touch;
-    overflow-y: scroll;
+    // overflow-y: scroll;
 }
 
 .flex-container:before {
